# srs-benchmark

./: .gitattributes  .gitignore  FSRS-6-uncertainty.jsonl  GRU-P-secs_pretrain.pth  GRU-P-siblings_pretrain.pth  GRU-P_pretrain.pth  GRU-secs_pretrain.pth  GRU_pretrain.pth  NN-17-secs_pretrain.pth  NN-17_pretrain.pth  NN_17_pretrain.pth  README.md  Transformer_pretrain.pth  analysis.py  benchmark.sh  build_dataset.py  cma_es_opt_defaults.py  config.py  data_loader.py  download_data.py  evaluate.py  flops_counter.py  fsrs6_uncertainty.py  model_processors.py  mypy.ini  other.py  outperformance_rate.py  outperformance_rate_small.py  performance.py  plot_forgetting_curve.py  plot_metrics_distribution.py  pretrain.py  pyproject.toml  pyrefly.toml  reptile_optuna.py  reptile_optuna_gru.py  reptile_trainer.py  reptile_trainer_gru.py  requirements.txt  revlogs2dataset.py  (+11 more)
bootstrapping/: FSRS-6-uncertainty.jsonl  README.md  fsrs6_uncertainty.py
dataset/: LICENSE
docs/: FSRS-7_ORDINAL.MD
features/: README.md  __init__.py  anki_day_engineer.py  base.py  create_features.py  dash_engineer.py  factory.py  fsrs7_lr_ensemble_engineer.py  fsrs_engineer.py  fsrs_one_step_engineer.py  logistic_regression_engineer.py  lstm_engineer.py  memory_engineer.py  neural_engineer.py  simple_engineer.py  usage_example.py
minimal/: .gitignore  README.md  data.py  fsrs_v7.py  pyproject.toml  script.py
models/: __init__.py  act_r.py  anki.py  base.py  constant.py  constant_model.py  dash.py  dash_act_r.py  dash_actr.py  ebisu.py  fsrs.py  fsrs1.py  fsrs2.py  fsrs3.py  fsrs4.py  fsrs4dot5.py  fsrs5.py  fsrs6.py  fsrs7_lr_ensemble.py  fsrs_base.py  fsrs_rs.py  fsrs_v1.py  fsrs_v2.py  fsrs_v3.py  fsrs_v4.py  fsrs_v4dot5.py  fsrs_v5.py  fsrs_v6.py  fsrs_v6_one_step.py  fsrs_v7.py  fsrs_v7_interval_penalty.py  fsrs_v7_ordinal.py  gru.py  gru_p.py  hlr.py  logistic_regression.py  lstm.py  model_factory.py  nn17.py  nn_17.py  (+7 more)
notebook/: metric_over_size.ipynb  metric_over_size_comparison.txt  metric_over_size_comparison_2.txt  metric_over_size_comparison_3.txt  metric_over_time.ipynb  minimum_limit.ipynb  minimum_limit_cache.pckl  post_lapse_stability_analysis.ipynb  press_hard_good_easy_evently.ipynb  search_bad_case.ipynb  users_average_review_durations_distributions.ipynb  users_average_reviews_per_day_distribution.ipynb  users_average_reviews_per_day_distribution.py
pretrain/: GRU-P-short_pretrain.pth  GRU-secs_pretrain.pth  GRU-short-secs-equalize_test_with_non_secs_opt_pretrain.pth  GRU-short-secs-equalize_test_with_non_secs_pretrain.pth  GRU-short-secs_opt_pretrain.pth  GRU-short-secs_pretrain.pth  GRU_pretrain.pth  LSTM-short-no_duration_pretrain.pth  LSTM-short-secs-duration-equalize_test_with_non_secs_opt_pretrain.pth  LSTM-short-secs-duration_pretrain.pth  LSTM-short-secs-equalize_test_with_non_secs_opt_pretrain.pth  LSTM-short-secs-equalize_test_with_non_secs_pretrain.pth  LSTM-short-secs-no_duration_opt_pretrain.pth  LSTM-short-secs-no_duration_pretrain.pth  LSTM-short-secs_opt_pretrain.pth  LSTM-short_opt_pretrain.pth  LSTM_opt_pretrain.pth  LSTM_pretrain.pth  NN-17_pretrain.pth
reptile/: reptile_optuna.py
result-20k/: ACT-R-secs.jsonl  AVG-secs.jsonl  AVG.jsonl  DASH[ACT-R]-secs.jsonl  GRU-P-secs.jsonl  GRU-P-short.jsonl  GRU-secs.jsonl  GRU.jsonl  HLR.jsonl  NN-17-secs.jsonl  NN-17.jsonl  SM2.jsonl  (+1 more)
(+360777 files in other folders)
