[project]
name = "fsrs-optimizer-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "matplotlib",
    "scikit-learn",
    "fsrs-optimizer>=6.4.0",
    "statsmodels>=0.14.6",
    "pyarrow>=15",
    "huggingface_hub",
    "wandb",
    "torch",
    "lmdb",
    "tomli",
    "scipy>=1.16.3",
    "ebisu>=2.2.0",
]

[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch",
    "torch.*",
    "matplotlib",
    "matplotlib.*",
    "wandb",
    "wandb.*"
]
ignore_missing_imports = true
