[project]
name = "srs-benchmark"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "matplotlib",
    "scikit-learn",
    "fsrs-optimizer>=6.4.0",
    "statsmodels>=0.14.6",
    "pyarrow>=15",
    "huggingface_hub",
    "wandb",
    "torch>=2.9.1",
    "lmdb",
    "tomli",
    "scipy>=1.16.3",
    "ebisu>=2.2.0",
    "multiprocess>=0.70.18",
    "fsrs-rs-python>=0.8.2",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[build-system]
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "torch",
    "torch.*",
    "matplotlib",
    "matplotlib.*",
    "wandb",
    "wandb.*"
]
ignore_missing_imports = true
